[package]
name = "zephyr-rust-wrappers"
version = "0.1.0"
authors = ["Klaus Kraßnitzer <klaus.krassnitzer@tuwien.ac.at", "Felix Resch <felix.resch@tuwien.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zephyr = { path = "../zephyr-rust/rust/zephyr" }
uuid = { version = "1.0.0-alpha.1", optional = true }
bitflags = { version = "1.3.2", optional = true }
pretty-hex = "0.2.1"

[features]
bluetooth = ["uuid", "bitflags"]